--- a/travis.yml
+++ b/travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.7"
   # command to run tests
 script:
-  - python -m unittest myapp_test
+  - python3 -m unittest myapp_test
 
 deploy:
   provider: pages
